--- a/safeapp/build.gradle
+++ b/safeapp/build.gradle
@@ -38,9 +38,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
 
 
     defaultConfig {
@@ -70,3 +71,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+//apply from: 'install.gradle'
+//apply from: 'bintray.gradle'
+apply from: 'publish.gradle'
