--- a/safeapp/publish.gradle
+++ b/safeapp/publish.gradle
@@ -53,8 +53,8 @@ def properties = new Properties()
 properties.load(new FileInputStream("local.properties"))
 
 bintray {
-    user = 'jonn255d'
-    key = '904bad0d324965b90712454fa3a1f6a357dfc13b'
+    user = ''
+    key = ''
 
     publications = ['Production']
     configurations = ['archives']
